added test cases